// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VaultSearchControl desktop renders correctly 1`] = `
<div>
  <div
    class="MuiPaper-root-5 makeStyles-paper-4 MuiPaper-elevation1-9 MuiPaper-rounded-6"
  >
    <div
      class="MuiGrid-root-33 makeStyles-firstRow-1 MuiGrid-container-34 MuiGrid-align-items-xs-center-42 MuiGrid-justify-content-xs-space-between-53"
    >
      <div>
        <label
          class="MuiFormControlLabel-root-136 makeStyles-checkbox-2"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root-161 MuiIconButton-root-152 PrivateSwitchBase-root-148 MuiCheckbox-root-142 MuiCheckbox-colorPrimary-146 MuiIconButton-colorPrimary-156"
          >
            <span
              class="MuiIconButton-label-160"
            >
              <input
                class="PrivateSwitchBase-input-151"
                data-indeterminate="false"
                type="checkbox"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-164"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-374"
            />
          </span>
          <span
            class="MuiTypography-root-173 MuiFormControlLabel-label-141 MuiTypography-body1-175"
          >
            <p
              class="MuiTypography-root-173 MuiTypography-body2-174"
            >
              Only show deposits
            </p>
          </span>
        </label>
        <label
          class="MuiFormControlLabel-root-136 makeStyles-checkbox-2"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root-161 MuiIconButton-root-152 PrivateSwitchBase-root-148 MuiCheckbox-root-142 MuiCheckbox-colorPrimary-146 MuiIconButton-colorPrimary-156"
          >
            <span
              class="MuiIconButton-label-160"
            >
              <input
                class="PrivateSwitchBase-input-151"
                data-indeterminate="false"
                type="checkbox"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-164"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-374"
            />
          </span>
          <span
            class="MuiTypography-root-173 MuiFormControlLabel-label-141 MuiTypography-body1-175"
          >
            <p
              class="MuiTypography-root-173 MuiTypography-body2-174"
            >
              Hide dust
            </p>
          </span>
        </label>
        <label
          class="MuiFormControlLabel-root-136 makeStyles-label-203"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root-161 MuiIconButton-root-152 PrivateSwitchBase-root-148 MuiCheckbox-root-142 MuiCheckbox-colorPrimary-146 MuiIconButton-colorPrimary-156"
          >
            <span
              class="MuiIconButton-label-160"
            >
              <input
                class="PrivateSwitchBase-input-151"
                data-indeterminate="false"
                type="checkbox"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-164"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-374"
            />
          </span>
          <span
            class="MuiTypography-root-173 MuiFormControlLabel-label-141 MuiTypography-body1-175"
          >
            <p
              class="MuiTypography-root-173 MuiTypography-body2-174"
            >
              🚀 Boosted Vaults
            </p>
          </span>
        </label>
      </div>
      <div>
        <div
          aria-label="apy apr selector"
          class="MuiButtonGroup-root-206 makeStyles-apr-3"
          role="group"
        >
          <button
            aria-selected="true"
            class="MuiButtonBase-root-161 MuiButton-root-230 MuiButton-outlined-235 MuiButtonGroup-grouped-212 MuiButtonGroup-groupedHorizontal-213 MuiButtonGroup-groupedOutlined-220 MuiButtonGroup-groupedOutlinedHorizontal-221 MuiButtonGroup-groupedOutlined-220 makeStyles-selected-204 makeStyles-button-205"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label-231"
            >
              APY
            </span>
            <span
              class="MuiTouchRipple-root-374"
            />
          </button>
          <button
            aria-selected="false"
            class="MuiButtonBase-root-161 MuiButton-root-230 MuiButton-outlined-235 MuiButtonGroup-grouped-212 MuiButtonGroup-groupedHorizontal-213 MuiButtonGroup-groupedOutlined-220 MuiButtonGroup-groupedOutlinedHorizontal-221 MuiButtonGroup-groupedOutlined-220 makeStyles-button-205"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label-231"
            >
              APR
            </span>
            <span
              class="MuiTouchRipple-root-374"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root-33 makeStyles-root-259 MuiGrid-container-34"
    >
      <div
        class="MuiGrid-root-33 MuiGrid-item-35 MuiGrid-grid-xs-true-67"
      >
        <div
          class="MuiFormControl-root-262 makeStyles-formControl-260"
        >
          <label
            class="MuiFormLabel-root-278 MuiInputLabel-root-266 MuiInputLabel-formControl-272 MuiInputLabel-animated-275 MuiInputLabel-outlined-277"
            data-shrink="false"
            id="status-selector-id-label"
          >
            Status
          </label>
          <div
            class="MuiInputBase-root-312 MuiOutlinedInput-root-297 MuiInputBase-formControl-313"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby="status-selector-id-label status-selector"
              class="MuiSelect-root-286 MuiSelect-select-287 MuiSelect-selectMenu-290 MuiSelect-outlined-289 MuiInputBase-input-323 MuiOutlinedInput-input-307"
              id="status-selector"
              role="button"
              tabindex="0"
            >
              <span>
                ​
              </span>
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput-296"
              data-testid="status-selector-input"
              tabindex="-1"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-164 MuiSelect-icon-292 MuiSelect-iconOutlined-295"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-334 MuiOutlinedInput-notchedOutline-306"
            >
              <legend
                class="PrivateNotchedOutline-legendLabelled-336"
              >
                <span>
                  Status
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-33 MuiGrid-item-35 MuiGrid-grid-xs-true-67"
      >
        <div
          class="MuiFormControl-root-262 makeStyles-formControl-338"
        >
          <label
            class="MuiFormLabel-root-278 MuiInputLabel-root-266 MuiInputLabel-formControl-272 MuiInputLabel-animated-275 MuiInputLabel-outlined-277"
            data-shrink="false"
            id="platform-selector-id-label"
          >
            Platform
          </label>
          <div
            class="MuiInputBase-root-312 MuiOutlinedInput-root-297 MuiInputBase-formControl-313"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby="platform-selector-id-label platform-selector"
              class="MuiSelect-root-286 MuiSelect-select-287 MuiSelect-selectMenu-290 MuiSelect-outlined-289 MuiInputBase-input-323 MuiOutlinedInput-input-307"
              id="platform-selector"
              role="button"
              tabindex="0"
            >
              <span>
                ​
              </span>
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput-296"
              data-testid="platform-selector-input"
              tabindex="-1"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-164 MuiSelect-icon-292 MuiSelect-iconOutlined-295"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-334 MuiOutlinedInput-notchedOutline-306"
            >
              <legend
                class="PrivateNotchedOutline-legendLabelled-336"
              >
                <span>
                  Platform
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-33 MuiGrid-item-35 MuiGrid-grid-xs-true-67"
      >
        <div
          class="MuiFormControl-root-262 makeStyles-formControl-340"
        >
          <label
            class="MuiFormLabel-root-278 MuiInputLabel-root-266 MuiInputLabel-formControl-272 MuiInputLabel-animated-275 MuiInputLabel-outlined-277"
            data-shrink="false"
            id="rewards-selector-id-label"
          >
            Rewards
          </label>
          <div
            class="MuiInputBase-root-312 MuiOutlinedInput-root-297 MuiInputBase-formControl-313"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby="rewards-selector-id-label rewards-selector"
              class="MuiSelect-root-286 MuiSelect-select-287 MuiSelect-selectMenu-290 MuiSelect-outlined-289 MuiInputBase-input-323 MuiOutlinedInput-input-307"
              id="rewards-selector"
              role="button"
              tabindex="0"
            >
              <span>
                ​
              </span>
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput-296"
              data-testid="rewards-selector-input"
              tabindex="-1"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-164 MuiSelect-icon-292 MuiSelect-iconOutlined-295"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-334 MuiOutlinedInput-notchedOutline-306"
            >
              <legend
                class="PrivateNotchedOutline-legendLabelled-336"
              >
                <span>
                  Rewards
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-33 MuiGrid-item-35 MuiGrid-grid-xs-true-67 MuiGrid-grid-md-true-95 MuiGrid-grid-lg-6-115"
      >
        <div
          class="MuiFormControl-root-262 MuiTextField-root-344 makeStyles-root-342"
        >
          <div
            class="MuiInputBase-root-312 MuiOutlinedInput-root-297 MuiInputBase-formControl-313 MuiInputBase-adornedEnd-317 MuiOutlinedInput-adornedEnd-302"
          >
            <input
              aria-invalid="false"
              aria-label="Vault Search"
              class="MuiInputBase-input-323 MuiOutlinedInput-input-307 MuiInputBase-inputAdornedEnd-328 MuiOutlinedInput-inputAdornedEnd-311"
              placeholder="Search by vault name, token, rewards..."
              type="text"
              value=""
            />
            <div
              class="MuiInputAdornment-root-345 MuiInputAdornment-positionEnd-348"
            >
              <button
                aria-label="search"
                class="MuiButtonBase-root-161 MuiIconButton-root-152 makeStyles-icon-343 MuiIconButton-sizeSmall-159"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label-160"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-164"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root-374"
                />
              </button>
            </div>
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-334 MuiOutlinedInput-notchedOutline-306"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend-335"
                style="width: 0.01px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-33 MuiGrid-item-35 MuiGrid-grid-xs-auto-66"
      >
        <button
          class="MuiButtonBase-root-161 MuiButton-root-230 MuiButton-text-232 MuiButton-textPrimary-233 MuiButton-fullWidth-253"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label-231"
          >
            CLEAR ALL
          </span>
          <span
            class="MuiTouchRipple-root-374"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`VaultSearchControl mobile opens filter dialog 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  
  <div
    aria-hidden="true"
  >
    <div
      class="MuiPaper-root-5 makeStyles-paper-4 MuiPaper-elevation1-9 MuiPaper-rounded-6"
    >
      <div
        class="MuiGrid-root-33 MuiGrid-container-34"
      >
        <div
          class="MuiGrid-root-33 MuiGrid-item-35 MuiGrid-grid-xs-true-67"
        >
          <label
            class="MuiFormControlLabel-root-136"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root-161 MuiIconButton-root-152 PrivateSwitchBase-root-148 MuiCheckbox-root-142 MuiCheckbox-colorPrimary-146 PrivateSwitchBase-checked-149 MuiCheckbox-checked-143 MuiIconButton-colorPrimary-156"
            >
              <span
                class="MuiIconButton-label-160"
              >
                <input
                  checked=""
                  class="PrivateSwitchBase-input-151"
                  data-indeterminate="false"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-164"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-376"
              />
            </span>
            <span
              class="MuiTypography-root-173 MuiFormControlLabel-label-141 MuiTypography-body1-175"
            >
              <p
                class="MuiTypography-root-173 MuiTypography-body2-174"
              >
                Only show deposits
              </p>
            </span>
          </label>
        </div>
        <div
          class="MuiGrid-root-33 MuiGrid-container-34 MuiGrid-item-35 MuiGrid-justify-content-xs-flex-end-52 MuiGrid-grid-xs-true-67"
        >
          <button
            class="MuiButtonBase-root-161 MuiButton-root-230 MuiButton-text-232 makeStyles-button-374"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label-231 makeStyles-buttonLabel-375"
            >
              <p
                class="MuiTypography-root-173 MuiTypography-body2-174 MuiTypography-displayInline-201"
              >
                Filters
              </p>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-164"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-376"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiDialog-root-359"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root-386"
      style="opacity: 1;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container-362 MuiDialog-scrollPaper-360"
      role="none presentation"
      style="opacity: 1;"
      tabindex="-1"
    >
      <div
        class="MuiPaper-root-5 MuiDialog-paper-363 MuiDialog-paperScrollPaper-364 MuiDialog-paperWidthXl-371 MuiDialog-paperFullWidth-372 MuiPaper-elevation24-32 MuiPaper-rounded-6"
        role="dialog"
      >
        <div
          class="MuiDialogTitle-root-388 makeStyles-title-352"
        >
          <div
            class="MuiGrid-root-33 MuiGrid-container-34 MuiGrid-align-items-xs-center-42 MuiGrid-justify-content-xs-space-between-53"
          >
            <h5
              class="MuiTypography-root-173 MuiTypography-h5-182 MuiTypography-displayInline-201"
            >
              Filter & Search
            </h5>
            <button
              aria-label="close vault filters"
              class="MuiButtonBase-root-161 MuiIconButton-root-152 makeStyles-closeButton-354"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label-160"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-164"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-376"
              />
            </button>
          </div>
        </div>
        <div
          class="MuiDialogContent-root-389 makeStyles-content-353"
        >
          <hr
            class="MuiDivider-root-391 makeStyles-topDivider-357"
          />
          <div
            class="MuiGrid-root-33 MuiGrid-container-34 MuiGrid-direction-xs-column-37"
          >
            <div
              class="MuiGrid-root-33 MuiGrid-item-35"
            >
              <label
                class="MuiFormControlLabel-root-136"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root-161 MuiIconButton-root-152 PrivateSwitchBase-root-148 MuiCheckbox-root-142 MuiCheckbox-colorPrimary-146 PrivateSwitchBase-checked-149 MuiCheckbox-checked-143 MuiIconButton-colorPrimary-156"
                >
                  <span
                    class="MuiIconButton-label-160"
                  >
                    <input
                      checked=""
                      class="PrivateSwitchBase-input-151"
                      data-indeterminate="false"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-164"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root-376"
                  />
                </span>
                <span
                  class="MuiTypography-root-173 MuiFormControlLabel-label-141 MuiTypography-body1-175"
                >
                  <p
                    class="MuiTypography-root-173 MuiTypography-body2-174"
                  >
                    Only show deposits
                  </p>
                </span>
              </label>
            </div>
            <div
              class="MuiGrid-root-33 MuiGrid-item-35"
            >
              <label
                class="MuiFormControlLabel-root-136"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root-161 MuiIconButton-root-152 PrivateSwitchBase-root-148 MuiCheckbox-root-142 MuiCheckbox-colorPrimary-146 PrivateSwitchBase-checked-149 MuiCheckbox-checked-143 MuiIconButton-colorPrimary-156"
                >
                  <span
                    class="MuiIconButton-label-160"
                  >
                    <input
                      checked=""
                      class="PrivateSwitchBase-input-151"
                      data-indeterminate="false"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-164"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root-376"
                  />
                </span>
                <span
                  class="MuiTypography-root-173 MuiFormControlLabel-label-141 MuiTypography-body1-175"
                >
                  <p
                    class="MuiTypography-root-173 MuiTypography-body2-174"
                  >
                    Hide dust
                  </p>
                </span>
              </label>
            </div>
            <div
              class="MuiGrid-root-33 MuiGrid-item-35"
            >
              <label
                class="MuiFormControlLabel-root-136 makeStyles-label-398"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root-161 MuiIconButton-root-152 PrivateSwitchBase-root-148 MuiCheckbox-root-142 MuiCheckbox-colorPrimary-146 PrivateSwitchBase-checked-149 MuiCheckbox-checked-143 MuiIconButton-colorPrimary-156"
                >
                  <span
                    class="MuiIconButton-label-160"
                  >
                    <input
                      checked=""
                      class="PrivateSwitchBase-input-151"
                      data-indeterminate="false"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-164"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root-376"
                  />
                </span>
                <span
                  class="MuiTypography-root-173 MuiFormControlLabel-label-141 MuiTypography-body1-175"
                >
                  <p
                    class="MuiTypography-root-173 MuiTypography-body2-174"
                  >
                    🚀 Boosted Vaults
                  </p>
                </span>
              </label>
            </div>
          </div>
          <hr
            class="MuiDivider-root-391 makeStyles-divider-356"
          />
          <div
            class="MuiGrid-root-33 MuiGrid-container-34 MuiGrid-direction-xs-column-37"
          >
            <div
              class="MuiGrid-root-33 makeStyles-select-355 MuiGrid-item-35"
            >
              <div
                class="MuiFormControl-root-401 makeStyles-formControl-399"
              >
                <label
                  class="MuiFormLabel-root-417 MuiInputLabel-root-405 MuiInputLabel-formControl-411 MuiInputLabel-animated-414 MuiInputLabel-shrink-413 MuiInputLabel-outlined-416 MuiFormLabel-filled-422"
                  data-shrink="true"
                  id="status-selector-id-label"
                >
                  Status
                </label>
                <div
                  class="MuiInputBase-root-451 MuiOutlinedInput-root-436 MuiInputBase-formControl-452"
                >
                  <div
                    aria-haspopup="listbox"
                    aria-labelledby="status-selector-id-label status-selector"
                    class="MuiSelect-root-425 MuiSelect-select-426 MuiSelect-selectMenu-429 MuiSelect-outlined-428 MuiInputBase-input-462 MuiOutlinedInput-input-446"
                    id="status-selector"
                    role="button"
                    tabindex="0"
                  >
                    guarded,  experimental
                  </div>
                  <input
                    aria-hidden="true"
                    class="MuiSelect-nativeInput-435"
                    data-testid="status-selector-input"
                    tabindex="-1"
                    value="guarded,experimental"
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-164 MuiSelect-icon-431 MuiSelect-iconOutlined-434"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                  </svg>
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-473 MuiOutlinedInput-notchedOutline-445"
                  >
                    <legend
                      class="PrivateNotchedOutline-legendLabelled-475 PrivateNotchedOutline-legendNotched-476"
                    >
                      <span>
                        Status
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root-33 makeStyles-select-355 MuiGrid-item-35"
            >
              <div
                class="MuiFormControl-root-401 makeStyles-formControl-477"
              >
                <label
                  class="MuiFormLabel-root-417 MuiInputLabel-root-405 MuiInputLabel-formControl-411 MuiInputLabel-animated-414 MuiInputLabel-shrink-413 MuiInputLabel-outlined-416 MuiFormLabel-filled-422"
                  data-shrink="true"
                  id="platform-selector-id-label"
                >
                  Platform
                </label>
                <div
                  class="MuiInputBase-root-451 MuiOutlinedInput-root-436 MuiInputBase-formControl-452"
                >
                  <div
                    aria-haspopup="listbox"
                    aria-labelledby="platform-selector-id-label platform-selector"
                    class="MuiSelect-root-425 MuiSelect-select-426 MuiSelect-selectMenu-429 MuiSelect-outlined-428 MuiInputBase-input-462 MuiOutlinedInput-input-446"
                    id="platform-selector"
                    role="button"
                    tabindex="0"
                  >
                    Convex,  Curve
                  </div>
                  <input
                    aria-hidden="true"
                    class="MuiSelect-nativeInput-435"
                    data-testid="platform-selector-input"
                    tabindex="-1"
                    value="Convex,Curve"
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-164 MuiSelect-icon-431 MuiSelect-iconOutlined-434"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                  </svg>
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-473 MuiOutlinedInput-notchedOutline-445"
                  >
                    <legend
                      class="PrivateNotchedOutline-legendLabelled-475 PrivateNotchedOutline-legendNotched-476"
                    >
                      <span>
                        Platform
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root-33 makeStyles-select-355 MuiGrid-item-35"
            >
              <div
                class="MuiFormControl-root-401 makeStyles-formControl-479"
              >
                <label
                  class="MuiFormLabel-root-417 MuiInputLabel-root-405 MuiInputLabel-formControl-411 MuiInputLabel-animated-414 MuiInputLabel-shrink-413 MuiInputLabel-outlined-416 MuiFormLabel-filled-422"
                  data-shrink="true"
                  id="rewards-selector-id-label"
                >
                  Rewards
                </label>
                <div
                  class="MuiInputBase-root-451 MuiOutlinedInput-root-436 MuiInputBase-formControl-452"
                >
                  <div
                    aria-haspopup="listbox"
                    aria-labelledby="rewards-selector-id-label rewards-selector"
                    class="MuiSelect-root-425 MuiSelect-select-426 MuiSelect-selectMenu-429 MuiSelect-outlined-428 MuiInputBase-input-462 MuiOutlinedInput-input-446"
                    id="rewards-selector"
                    role="button"
                    tabindex="0"
                  >
                    DCA,  Compounder
                  </div>
                  <input
                    aria-hidden="true"
                    class="MuiSelect-nativeInput-435"
                    data-testid="rewards-selector-input"
                    tabindex="-1"
                    value="DCA,Compounder"
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-164 MuiSelect-icon-431 MuiSelect-iconOutlined-434"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                  </svg>
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-473 MuiOutlinedInput-notchedOutline-445"
                  >
                    <legend
                      class="PrivateNotchedOutline-legendLabelled-475 PrivateNotchedOutline-legendNotched-476"
                    >
                      <span>
                        Rewards
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root-33 MuiGrid-item-35"
            >
              <div
                class="MuiFormControl-root-401 MuiTextField-root-483 makeStyles-root-481"
              >
                <div
                  class="MuiInputBase-root-451 MuiOutlinedInput-root-436 MuiInputBase-formControl-452 MuiInputBase-adornedEnd-456 MuiOutlinedInput-adornedEnd-441"
                >
                  <input
                    aria-invalid="false"
                    aria-label="Vault Search"
                    class="MuiInputBase-input-462 MuiOutlinedInput-input-446 MuiInputBase-inputAdornedEnd-467 MuiOutlinedInput-inputAdornedEnd-450"
                    placeholder="Search by vault name, token, rewards..."
                    type="text"
                    value="bitcoin convex"
                  />
                  <div
                    class="MuiInputAdornment-root-484 MuiInputAdornment-positionEnd-487"
                  >
                    <button
                      aria-label="search"
                      class="MuiButtonBase-root-161 MuiIconButton-root-152 makeStyles-icon-482 MuiIconButton-sizeSmall-159"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiIconButton-label-160"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root-164"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root-376"
                      />
                    </button>
                  </div>
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-473 MuiOutlinedInput-notchedOutline-445"
                    style="padding-left: 8px;"
                  >
                    <legend
                      class="PrivateNotchedOutline-legend-474"
                      style="width: 0.01px;"
                    >
                      <span>
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
          </div>
          <hr
            class="MuiDivider-root-391 makeStyles-divider-356"
          />
          <div
            class="MuiGrid-root-33 MuiGrid-container-34"
          >
            <div
              class="MuiGrid-root-33 makeStyles-apr-358 MuiGrid-item-35"
            >
              <div
                aria-label="apy apr selector"
                class="MuiButtonGroup-root-493"
                role="group"
              >
                <button
                  aria-selected="false"
                  class="MuiButtonBase-root-161 MuiButton-root-230 MuiButton-outlined-235 MuiButtonGroup-grouped-499 MuiButtonGroup-groupedHorizontal-500 MuiButtonGroup-groupedOutlined-507 MuiButtonGroup-groupedOutlinedHorizontal-508 MuiButtonGroup-groupedOutlined-507 makeStyles-button-492"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label-231"
                  >
                    APY
                  </span>
                  <span
                    class="MuiTouchRipple-root-376"
                  />
                </button>
                <button
                  aria-selected="true"
                  class="MuiButtonBase-root-161 MuiButton-root-230 MuiButton-outlined-235 MuiButtonGroup-grouped-499 MuiButtonGroup-groupedHorizontal-500 MuiButtonGroup-groupedOutlined-507 MuiButtonGroup-groupedOutlinedHorizontal-508 MuiButtonGroup-groupedOutlined-507 makeStyles-selected-491 makeStyles-button-492"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label-231"
                  >
                    APR
                  </span>
                  <span
                    class="MuiTouchRipple-root-376"
                  />
                </button>
              </div>
            </div>
          </div>
          <hr
            class="MuiDivider-root-391 makeStyles-divider-356"
          />
          <div
            class="MuiGrid-root-33 MuiGrid-container-34 MuiGrid-spacing-xs-2-57 MuiGrid-justify-content-xs-flex-end-52"
          >
            <div
              class="MuiGrid-root-33 MuiGrid-item-35"
            >
              <button
                class="MuiButtonBase-root-161 MuiButton-root-230 MuiButton-text-232 MuiButton-textPrimary-233"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label-231"
                >
                  Clear All
                </span>
                <span
                  class="MuiTouchRipple-root-376"
                />
              </button>
            </div>
            <div
              class="MuiGrid-root-33 MuiGrid-item-35"
            >
              <button
                class="MuiButtonBase-root-161 MuiButton-root-230 MuiButton-contained-238 MuiButton-containedPrimary-239"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label-231"
                >
                  Apply Filters
                </span>
                <span
                  class="MuiTouchRipple-root-376"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`VaultSearchControl mobile renders correctly 1`] = `
<div>
  <div
    class="MuiPaper-root-5 makeStyles-paper-4 MuiPaper-elevation1-9 MuiPaper-rounded-6"
  >
    <div
      class="MuiGrid-root-33 MuiGrid-container-34"
    >
      <div
        class="MuiGrid-root-33 MuiGrid-item-35 MuiGrid-grid-xs-true-67"
      >
        <label
          class="MuiFormControlLabel-root-136"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root-161 MuiIconButton-root-152 PrivateSwitchBase-root-148 MuiCheckbox-root-142 MuiCheckbox-colorPrimary-146 PrivateSwitchBase-checked-149 MuiCheckbox-checked-143 MuiIconButton-colorPrimary-156"
          >
            <span
              class="MuiIconButton-label-160"
            >
              <input
                checked=""
                class="PrivateSwitchBase-input-151"
                data-indeterminate="false"
                type="checkbox"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-164"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-376"
            />
          </span>
          <span
            class="MuiTypography-root-173 MuiFormControlLabel-label-141 MuiTypography-body1-175"
          >
            <p
              class="MuiTypography-root-173 MuiTypography-body2-174"
            >
              Only show deposits
            </p>
          </span>
        </label>
      </div>
      <div
        class="MuiGrid-root-33 MuiGrid-container-34 MuiGrid-item-35 MuiGrid-justify-content-xs-flex-end-52 MuiGrid-grid-xs-true-67"
      >
        <button
          class="MuiButtonBase-root-161 MuiButton-root-230 MuiButton-text-232 makeStyles-button-374"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label-231 makeStyles-buttonLabel-375"
          >
            <p
              class="MuiTypography-root-173 MuiTypography-body2-174 MuiTypography-displayInline-201"
            >
              Filters
            </p>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-164"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root-376"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;
